# src

./: .gitattributes  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  Makefile  SHORTCOMINGS.md  STABILITY.md  _typos.toml  build.rs  crate-status.md  general-tasks.md  justfile  tasks.md
cmd/: CHANGELOG.md  Cargo.toml
cmd/examples/: clone.rs  init-repo-and-commit.rs  interrupt-handler-allows-graceful-shutdown.rs  reversible-interrupt-handlers.rs  stats.rs
cmd/src/: attribute_stack.rs  commit.rs  create.rs  diff.rs  discover.rs  env.rs  filter.rs  id.rs  init.rs  interrupt.rs  lib.rs  mailmap.rs  merge.rs  path.rs  pathspec.rs  prelude.rs  progress.rs  shallow.rs  tag.rs  types.rs
cmd/src/clone/: access.rs  checkout.rs  mod.rs
cmd/src/clone/fetch/: mod.rs  util.rs
cmd/src/config/: mod.rs  overrides.rs
cmd/src/config/cache/: access.rs  incubate.rs  init.rs  util.rs
cmd/src/config/snapshot/: _impls.rs  access.rs  credential_helpers.rs
cmd/src/config/tree/: keys.rs  traits.rs
cmd/src/dirwalk/: iter.rs  mod.rs  options.rs
cmd/src/ext/: object_id.rs  reference.rs  rev_spec.rs  tree.rs
cmd/src/head/: log.rs  mod.rs  peel.rs
cmd/src/object/: blob.rs  commit.rs  errors.rs  impls.rs  mod.rs  peel.rs  tag.rs
cmd/src/object/tree/: editor.rs  entry.rs  mod.rs  traverse.rs
cmd/src/open/: mod.rs  options.rs  permissions.rs  repository.rs
cmd/src/reference/: edits.rs  errors.rs  iter.rs  log.rs  mod.rs  remote.rs
cmd/src/remote/: access.rs  build.rs  connect.rs  errors.rs  fetch.rs  init.rs  name.rs  save.rs
cmd/src/remote/connection/: access.rs  mod.rs  ref_map.rs
cmd/src/remote/url/: rewrite.rs  scheme_permission.rs
cmd/src/repository/: attributes.rs  blame.rs  cache.rs  checkout.rs  diff.rs  dirwalk.rs  filter.rs  graph.rs  identity.rs  impls.rs  index.rs  init.rs  location.rs  mailmap.rs  merge.rs  mod.rs  object.rs  pathspec.rs  permissions.rs  reference.rs  remote.rs  revision.rs  shallow.rs  state.rs  submodule.rs  worktree.rs
cmd/src/repository/config/: branch.rs  mod.rs  transport.rs
cmd/src/revision/: mod.rs  walk.rs
cmd/src/revision/spec/: mod.rs
cmd/src/status/: index_worktree.rs  mod.rs  platform.rs  tree_index.rs
cmd/src/status/iter/: mod.rs  types.rs
cmd/src/submodule/: errors.rs  mod.rs
cmd/src/worktree/: mod.rs  proxy.rs
cmd/tests/: interrupt.rs  src-init.rs  submodule_open.rs
cmd/tests/fixtures/: make_diff_repo.sh  make_rev_parse_repo.sh
cmd/tests/fixtures/generated-archives/: make_basic_repo.tar  make_config_repos.tar  make_diff_repo.tar  make_head_repos.tar  make_remote_config_repos.tar  make_rev_parse_repo.tar  make_rev_spec_parse_repos.tar  make_shallow_repo.tar  make_status_repos.tar  make_submodules.tar
cmd/tests/gix/: clone.rs  commit.rs  diff.rs  head.rs  id.rs  init.rs  status.rs  submodule.rs  util.rs
cmd/tests/gix/config/: tree.rs
cmd/tests/gix/object/: commit.rs  (+1 more)
src-archive/: CHANGELOG.md  Cargo.toml
src-attributes/: CHANGELOG.md  Cargo.toml
src-attributes/fuzz/: Cargo.toml
src-blame/: CHANGELOG.md  Cargo.toml
src-command/: CHANGELOG.md  Cargo.toml
src-commitgraph/: CHANGELOG.md  Cargo.toml
src-commitgraph/fuzz/: Cargo.toml
src-commitgraph/src/file/: access.rs  init.rs
src-core/: CHANGELOG.md  Cargo.toml
src-core/src/: discover.rs  lib.rs  mailmap.rs  net.rs  organize.rs
src-core/src/commitgraph/: verify.rs
src-core/src/corpus/: db.rs  engine.rs  run.rs  trace.rs
src-core/src/hours/: core.rs  mod.rs  util.rs
src-core/src/index/: checkout.rs  information.rs  mod.rs
src-core/src/pack/: create.rs  explode.rs  index.rs  multi_index.rs  receive.rs  verify.rs
src-core/src/query/: mod.rs
src-core/src/repository/: archive.rs  blame.rs  branch.rs  cat.rs  clean.rs  clone.rs  commit.rs  config.rs  credential.rs  diff.rs  dirty.rs  exclude.rs  fetch.rs  fsck.rs  log.rs  mailmap.rs  merge_base.rs  mod.rs  odb.rs  remote.rs  status.rs  submodule.rs  tag.rs  tree.rs  verify.rs  worktree.rs
src-credentials/: CHANGELOG.md  Cargo.toml
src-diff/: CHANGELOG.md  Cargo.toml
src-diff/src/tree/: function.rs
src-diff/tests/: Cargo.toml  README.md
src-diff/tests/diff/: index.rs  tree.rs  tree_with_rewrites.rs
src-diff/tests/fixtures/: make_diff_for_rewrites_repo.sh  make_diff_for_sliders_repo.sh  make_diff_repo.sh
src-dir/: CHANGELOG.md  Cargo.toml
src-filter/: CHANGELOG.md  Cargo.toml
src-filter/src/: lib.rs
src-filter/src/driver/: apply.rs
src-fsck/: CHANGELOG.md  Cargo.toml
src-glob/: CHANGELOG.md  Cargo.toml
src-glob/tests/pattern/: matching.rs
src-hashtable/: CHANGELOG.md  Cargo.toml
src-hashtable/src/: lib.rs
src-ignore/: CHANGELOG.md  Cargo.toml
src-index/: CHANGELOG.md  Cargo.toml
src-index/src/decode/: mod.rs
src-index/src/file/: init.rs
src-index/tests/: Cargo.toml
src-lfs/: CHANGELOG.md  Cargo.toml
src-lock/: CHANGELOG.md  Cargo.toml
src-lock/src/: lib.rs
src-merge/: CHANGELOG.md  Cargo.toml
src-merge/fuzz/: Cargo.toml
src-negotiate/: CHANGELOG.md  Cargo.toml
src-object/: CHANGELOG.md  Cargo.toml
src-object/fuzz/: Cargo.toml
src-object/fuzz/fuzz_targets/: fuzz_commit_corpus_builder.sh  fuzz_tag_corpus_builder.sh  fuzz_tree_corpus_builder.sh
src-object/src/: lib.rs
src-odb/: CHANGELOG.md  Cargo.toml
src-odb/src/: lib.rs
src-odb/tests/: Cargo.toml
src-packetline/: CHANGELOG.md  Cargo.toml
src-packetline/src/: read.rs
src-packetline/src/async_io/: read.rs
src-packetline/src/blocking_io/: read.rs
src-path/: CHANGELOG.md  Cargo.toml
src-pathspec/: CHANGELOG.md  Cargo.toml  README.md
src-pathspec/fuzz/: Cargo.toml
src-pathspec/src/: lib.rs
src-prompt/: CHANGELOG.md  Cargo.toml
src-ref/: CHANGELOG.md  Cargo.toml
src-ref/fuzz/: Cargo.toml
src-ref/src/: parse.rs
src-ref/tests/: Cargo.toml
src-ref/tests/fixtures/: make_ref_repository.sh  make_repo_for_reflog.sh
src-ref/tests/refs/: store.rs
src-refspec/: CHANGELOG.md  Cargo.toml  README.md
src-refspec/fuzz/: Cargo.toml
src-revision/: CHANGELOG.md  Cargo.toml  README.md
src-revision/fuzz/: Cargo.toml
src-revwalk/: CHANGELOG.md  Cargo.toml
(+375 files in other folders)
