lints.workspace = true

[package]
name = "src-archive"
version = "0.29.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "archive generation from of a worktree stream"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
default = ["tar", "tar_gz", "zip"]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["src-worktree-stream/sha1", "src-object/sha1"]

## Enable the `tar` archive format. It has support for all information, except for object ids.
tar = ["dep:tar", "dep:src-path"]
## Enable the `tar.gz` archive format.
tar_gz = ["tar", "dep:flate2"]

## Enable the `zip` archive format.
zip = ["dep:rawzip", "dep:flate2"]


[dependencies]
src-worktree-stream = { version = "^0.29.0", path = "../src-worktree-stream" }
src-object = { version = "^0.57.0", path = "../src-object" }
src-path = { version = "^0.11.1", path = "../src-path", optional = true }
src-date = { version = "^0.15.0", path = "../src-date" }

flate2 = { version = "1.1.9", optional = true, default-features = false, features = ["zlib-rs"] }
rawzip = { version = "0.4.3", optional = true }

src-error = { version = "^0.2.0", path = "../src-error" }
bstr = { version = "1.12.0", default-features = false }

tar = { version = "0.4.38", optional = true }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
src-odb = { path = "../src-odb" }
src-worktree = { path = "../src-worktree", default-features = false, features = [
    "attributes",
] }
src-hash = { path = "../src-hash", features = ["sha1"] }
src-attributes = { path = "../src-attributes" }
src-object = { path = "../src-object" }
src-filter = { path = "../src-filter" }

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
