lints.workspace = true

[package]
name = "src-attributes"
version = "0.31.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing .gitattributes files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "src-glob/serde", "kstring/serde"]

[dependencies]
src-path = { version = "^0.11.1", path = "../src-path" }
src-quote = { version = "^0.7.0", path = "../src-quote" }
src-glob = { version = "^0.24.0", path = "../src-glob" }
src-trace = { version = "^0.1.18", path = "../src-trace" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
smallvec = "1.15.1"
kstring = "2.0.0"
unicode-bom = { version = "2.0.3" }
thiserror = "2.0.18"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
src-fs = { path = "../src-fs" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
