lints.workspace = true

[package]
name = "src-blame"
version = "0.10.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated to implementing a 'blame' algorithm"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = [
    "src-commitgraph/sha1",
    "src-diff/sha1",
    "src-hash/sha1",
    "src-object/sha1",
    "src-revwalk/sha1",
    "src-traverse/sha1",
    "src-worktree/sha1",
]

[dependencies]
src-error = { version = "^0.2.0", path = "../src-error" }
src-commitgraph = { version = "^0.34.0", path = "../src-commitgraph" }
src-revwalk = { version = "^0.28.0", path = "../src-revwalk" }
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-date = { version = "^0.15.0", path = "../src-date" }
src-diff = { version = "^0.60.0", path = "../src-diff", default-features = false, features = ["blob", "blob-experimental"] }
src-object = { version = "^0.57.0", path = "../src-object" }
src-hash = { version = "^0.22.1", path = "../src-hash" }
src-worktree = { version = "^0.49.0", path = "../src-worktree", default-features = false, features = ["attributes"] }
src-traverse = { version = "^0.54.0", path = "../src-traverse" }

smallvec = "1.15.1"
thiserror = "2.0.18"

[dev-dependencies]
src-ref = { path = "../src-ref" }
src-filter = { path = "../src-filter" }
src-fs = { path = "../src-fs" }
src-index = { path = "../src-index" }
src-odb = { path = "../src-odb" }
src-testtools = { path = "../tests/tools" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
