lints.workspace = true

[package]
name = "src-command"
version = "0.8.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project handling internal git command execution"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/lib.rs", "LICENSE-*"]

[lib]
doctest = false

[dependencies]
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-quote = { version = "^0.7.0", path = "../src-quote" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
shell-words = "1.1"

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
