lints.workspace = true

[package]
name = "src-credentials"
version = "0.37.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project to interact with git credentials helpers"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "src-sec/serde"]

[dependencies]
src-sec = { version = "^0.13.1", path = "../src-sec" }
src-url = { version = "^0.35.2", path = "../src-url" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-command = { version = "^0.8.0", path = "../src-command" }
src-config-value = { version = "^0.17.1", path = "../src-config-value" }
src-prompt = { version = "^0.14.0", path = "../src-prompt" }
src-date = { version = "^0.15.0", path = "../src-date" }
src-trace = { version = "^0.1.18", path = "../src-trace" }

thiserror = "2.0.18"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }



document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
src-quote = { path = "../src-quote" }
src-sec = { path = "../src-sec" }
src-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Public optional `serde` feature is retained for downstream feature compatibility.
    "serde",
]
