lints.workspace = true

[package]
name = "src-dir"
version = "0.22.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lib]
doctest = false
test = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["src-discover/sha1", "src-index/sha1", "src-object/sha1", "src-worktree/sha1"]

[dependencies]
src-trace = { version = "^0.1.18", path = "../src-trace" }
src-index = { version = "^0.48.0", path = "../src-index" }
src-discover = { version = "^0.48.0", path = "../src-discover" }
src-fs = { version = "^0.19.1", path = "../src-fs" }
src-path = { version = "^0.11.1", path = "../src-path" }
src-pathspec = { version = "^0.16.0", path = "../src-pathspec" }
src-worktree = { version = "^0.49.0", path = "../src-worktree", default-features = false }
src-object = { version = "^0.57.0", path = "../src-object" }
src-ignore = { version = "^0.19.0", path = "../src-ignore" }
src-utils = { version = "^0.3.1", path = "../src-utils", features = ["bstr"] }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
src-testtools = { path = "../tests/tools" }
src-fs = { path = "../src-fs" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
